Usage of primitive maps and sets